update:增加接口回调通知图片选择方式;完善自定义文件可选机制;增加布局支持(空/loading)

--- a/albumSelector/src/main/AndroidManifest.xml
+++ b/albumSelector/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.baize.albumselector">
 
     <application>
-        <activity android:name=".AlbumSelectorActivity"></activity>
+        <activity android:name=".AlbumSelectorActivity" />
     </application>
 
 </manifest>
