去掉携程依赖，使用asyncTask做异步查询；完善视频小图标展示逻辑和视频时长描述

--- a/albumSelector/build.gradle
+++ b/albumSelector/build.gradle
@@ -49,8 +49,8 @@ dependencies {
         exclude group: 'androidx.core'
     }
     //携程
-    def coroutines = "1.3.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
+//    def coroutines = "1.3.9"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
 
 }
